feat: implementacion de CRUD completo en MS Resena y carga inicial con data.sql